# simple_bodypix_python

./: .flake8  README.rst  pyproject.toml
apps/: test_bodypix.py  test_camera.py
src/bodypix/: __init__.py  models.py  processor.py
