[build-system]
requires = [
    "flit_core >=2.0,<3",
    "wheel",
    "oldest-supported-numpy",
]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "bodypix"
author = "Andrej Rode"
author-email = "mail@andrejro.de"
# description-file = "README.rst"
home-page = "https://github.com/noc0lour/simple_bodypix_python/"
keywords = "machine learning,tensorflow"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: CPython",
]
requires-python = ">=3.6,<3.9"
requires = [
    # "cv2",
    "numpy",
    "acapture",
    "pyglview",
]

# [tool.flit.metadata.requires-extra]

# [tool.flit.metadata.urls]